Adding receiving message endpoint
