# backend_api/service_api/handlers/api_handler.py
@@ -2,8 +2,10 @@ from pyramid.response import Response
 from pyramid.view import view_config
 
 from service_api.config import Config
+from service_api.controllers.api_controller import MessageController
 
 logger = Config.get_logger()
+message_controller = MessageController()
 
 
 @view_config(route_name="swagger", request_method="GET")
@@ -15,3 +17,11 @@ def swagger(request):
 @view_config(route_name="get_status", request_method="GET")
 def get_status(request):
     return {"ok": True}
+
+
+@view_config(route_name="receive_message", request_method="POST")
+def receive_message(request):
+    payload = request.swagger_data["payload"]
+    data = message_controller.receive(payload.get("message"))
+    logger.info(f"dumping the process data {data}")
+    return {"status_code": 201}
